* New SDL logo * Add ResearchStack * Delete unused image files bloating the git

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="shortcut icon" href="startup/flat-ui/images/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="common-files/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="common-files/icons/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="common-files/icons/favicon-16x16.png">
 
         <link rel="stylesheet" href="startup/flat-ui/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="startup/flat-ui/css/flat-ui.css">
@@ -33,7 +35,7 @@
                 <div class="navbar-header" style="font-family: 'Lato', sans-serif;">
                     <button type="button" class="navbar-toggle"></button>
                     <a class="brand" href="#" style="padding-right: 15px;">
-                        <img src="startup/common-files/icons/sdl_logo12.png" width="50" height="50" alt="">
+                        <img src="startup/common-files/icons/sdl_logo.png" width="50" height="50" alt="">
                             the small data lab <a class="brand" style="font-weight: 400; color: #777;" href="http://tech.cornell.edu/">@ CornellTech</a>
                     </a>
                 </div>
@@ -76,7 +78,7 @@
 
 <section class="content-5" id="work">
     <div class="container">
-        <img src="startup/common-files/icons/buildingblocks.png" width="200" height="200" alt="">
+        <img src="startup/common-files/icons/sdl_logo.png" width="200" height="200" alt="">
 
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
@@ -493,8 +495,37 @@
     </div>
 </section>
 
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="http://researchstack.org">ResearchStack</a></h3>
 
+                <p>
+                    ResearchStack is an SDK and UX framework for building research study apps on Android.
+                </p>
+                <p>
+                    An overriding goal of ResearchStack is to help developers and researchers with existing apps on iOS more easily adapt those apps for Android. Though the correspondence of features between the two SDKs isn’t one-to-one, the two SDKs offer enough shared functionality to greatly speed up adaptation of ResearchKit apps to Android (and ResearchStack apps to iOS) and the procedural aspects of running a study on a new platform (such as IRB approval and secure connectivity with a data collection backend).
+                </p>
+                <p>
+                    ResearchStack is developed in collaboration with <a href="http://www.touchlab.co/">touchlab</a>. Initial funding for the project is provided by the <a href="http://www.rwjf.org/">Robert Wood Johnson Foundation</a>.
+                </p>
 
+                <p><a href="http://researchstack.org">Click here to get started!</a></p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="startup/common-files/img/content/researchstack_logo.png"  alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
@@ -534,7 +565,7 @@
                         <div><img src="startup/common-files/img/crew/ivy_resized.png" alt=""></div>
                     </div>
                     <div class="info">
-                       Ivy Wu, <br/>Project Manager
+                      Ivy Wu, <br/>Project Manager
                     </div>
                 </div>
             </div>
@@ -542,14 +573,12 @@
 
         <div class="members">
             <div class="member-wrapper">
-                <div class="member-wrapper">
-                    <div class="member">
-                        <div class="photo-wrapper">
-                            <div><img src="startup/common-files/img/crew/dstein_cropped.jpg" alt=""></div>
-                        </div>
-                        <div class="info">
-                           Dan Stein, <br/>Clinical Advisor in Residence
-                        </div>
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/dstein_cropped.jpg" alt=""></div>
+                    </div>
+                    <div class="info">
+                       Dan Stein, <br/>Clinical Advisor in Residence
                     </div>
                 </div>
             </div>
@@ -671,7 +700,7 @@
                         <div><img src="startup/common-files/img/crew/andy-c.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Andy Hsieh, <br/>Phd Candidate
+                        Andy Hsieh, <br/>PhD Candidate
                     </div>
                 </div>
             </div>
