Updated team section

--- a/index.html
+++ b/index.html
@@ -559,39 +559,7 @@
                     </div>
                 </div>
             </div>
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/ivy_resized.png" alt=""></div>
-                    </div>
-                    <div class="info">
-                      Ivy Wu, <br/>Project Manager
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="members">
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/dstein_cropped.jpg" alt=""></div>
-                    </div>
-                    <div class="info">
-                       Dan Stein, <br/>Clinical Advisor in Residence
-                    </div>
-                </div>
-            </div>
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/ThomasTsangOfficialPic.jpg" alt=""></div>
-                    </div>
-                    <div class="info">
-                       Thomas Tsang, <br/>Clinical Advisor in Residence
-                    </div>
-                </div>
-            </div>
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
@@ -602,6 +570,43 @@
                     </div>
                 </div>
             </div>
+          </div>
+
+            <div class="members">
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/dstein_cropped.jpg" alt=""></div>
+                    </div>
+                    <div class="info">
+                       Dan Stein, <br/>Clinical Advisor in Residence
+                    </div>
+                </div>
+            </div>
+
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/ThomasTsangOfficialPic.jpg" alt=""></div>
+                    </div>
+                    <div class="info">
+                       Thomas Tsang, <br/>Clinical Advisor in Residence
+                    </div>
+                </div>
+            </div>
+
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <br/>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <br/>
@@ -615,7 +620,7 @@
 
                         </div>
                         <div class="info">
-                            Aaron Baum, <br/>Technologist-in-Residence
+                            Aaron Baum
                         </div>
                     </div>
                 </div>
@@ -626,7 +631,7 @@
                         <div><img src="startup/common-files/img/crew/michael-c.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Michael Carroll, <br/>Technologist-in-Residence
+                        Michael Carroll
                     </div>
                 </div>
             </div>
@@ -636,50 +641,14 @@
                         <div><img src="startup/common-files/img/crew/diana_f.jpg" alt=""></div>
                     </div>
                     <div class="info">
-                        Diana Freed,<br/>Technologist-in-Residence
+                        Diana Freed
                     </div>
                 </div>
             </div>
         </div>
-        <div class="members">
-            <div class="member-wrapper">
-                <div class="member-wrapper">
-                    <div class="member">
-                        <div class="photo-wrapper">
-                            <div><img src="startup/common-files/img/crew/judy-w.png" alt=""></div>
 
-                        </div>
-                        <div class="info">
-                            Judy Wu, <br/>Technologist-in-Residence
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
-                    </div>
-                    <div class="info">
-                        <br/>
-                        <br/>
-                    </div>
-                </div>
-            </div>
-            <div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
-                    </div>
-                    <div class="info">
-                        <br/>
-                        <br/>
-                    </div>
-                </div>
-            </div>
-        </div>
         <br/>
-        <h5> Graduate Students</h5>
+        <h5> PhD Students</h5>
         <div class="members">
             <div class="member-wrapper">
                 <div class="member-wrapper">
@@ -689,7 +658,7 @@
 
                         </div>
                         <div class="info">
-                            Faisal Alquadoomi, <br/>PhD Candidate
+                            Faisal Alquadoomi
                         </div>
                     </div>
                 </div>
@@ -700,7 +669,7 @@
                         <div><img src="startup/common-files/img/crew/andy-c.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Andy Hsieh, <br/>PhD Candidate
+                        Andy Hsieh
                     </div>
                 </div>
             </div>
@@ -710,7 +679,7 @@
                         <div><img src="startup/common-files/img/crew/fabian-o.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Fabian Okeke, <br/>PhD Candidate
+                        Fabian Okeke
                     </div>
                 </div>
             </div>
@@ -724,7 +693,7 @@
 
                         </div>
                         <div class="info">
-                            Longqi Yang, <br/>PhD Candidate
+                            Longqi Yang
                         </div>
                     </div>
                 </div>
@@ -752,8 +721,84 @@
                 </div>
             </div>
         </div>
-    </div>
 
+        <br/>
+        <h5>Software Collaborators</h5>
+        <div class="members">
+            <div class="member-wrapper">
+                <div class="member-wrapper">
+                    <div class="member">
+                        <div class="photo-wrapper">
+                            <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+
+                        </div>
+                        <div class="info">
+                            Jared Sieling
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/judy-w.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        Judy Wu
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <br/>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+         </div>
+
+        <br/>
+        <h5> Masters Students</h5>
+        <div class="members">
+            <div class="member-wrapper">
+                <div class="member-wrapper">
+                    <div class="member">
+                        <div class="photo-wrapper">
+                            <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+
+                        </div>
+                        <div class="info">
+                            Anas Bouzoubaa
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        Yanbo (Sunny) Li
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        Rachel Ruiheng Wang
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--/.container-->
 </section>
 
