Updates to ResearchStack description

--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@
                 <h3><a href="http://researchstack.org">ResearchStack</a></h3>
 
                 <p>
-                    ResearchStack is an SDK and UX framework for building research study apps on Android.
+                    <a href="http://researchstack.org">ResearchStack</a> is an SDK and UX framework for building research study apps on Android.
                 </p>
                 <p>
                     An overriding goal of ResearchStack is to help developers and researchers with existing apps on iOS more easily adapt those apps for Android. Though the correspondence of features between the two SDKs isn’t one-to-one, the two SDKs offer enough shared functionality to greatly speed up adaptation of ResearchKit apps to Android (and ResearchStack apps to iOS) and the procedural aspects of running a study on a new platform (such as IRB approval and secure connectivity with a data collection backend).
                 </p>
                 <p>
-                    ResearchStack is developed in collaboration with <a href="http://www.touchlab.co/">touchlab</a>. Initial funding for the project is provided by the <a href="http://www.rwjf.org/">Robert Wood Johnson Foundation</a>.
+                    ResearchStack is developed in collaboration with <a href="http://www.openmhealth.org/">Open mHealth</a> and <a href="http://www.touchlab.co/">touchlab</a>. Initial funding for the project is provided by the <a href="http://www.rwjf.org/">Robert Wood Johnson Foundation</a>.
                 </p>
 
                 <p><a href="http://researchstack.org">Click here to get started!</a></p>
