--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <div class="member-wrapper">
                     <div class="member">
                         <div class="photo-wrapper">
-                            <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                            <div><img src="startup/common-files/img/crew/anas.jpeg" alt=""></div>
 
                         </div>
                         <div class="info">
@@ -780,17 +780,17 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/yanbo.JPG" alt=""></div>
                     </div>
                     <div class="info">
-                        Yanbo (Sunny) Li
+                        Yanbo Li
                     </div>
                 </div>
             </div>
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/rachel.JPG" alt=""></div>
                     </div>
                     <div class="info">
                         Rachel Ruiheng Wang
