--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                 <div class="member-wrapper">
                     <div class="member">
                         <div class="photo-wrapper">
-                            <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                            <div><img src="startup/common-files/img/crew/jared.jpg" alt=""></div>
 
                         </div>
                         <div class="info">
