--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="project" id="ohmage">
                     <div class="photo-wrapper bg-peter-river">
                         <div class="photo"></div>
-                        <a href="http://ohmage-omh.smalldata.io/" class="overlay"><img src="startup/common-files/icons/ohmage.png" width="50" height="50" alt=""></a>
+                        <a href="http://smalldata.io/ohmage-omh-website" class="overlay"><img src="startup/common-files/icons/ohmage.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify"> -->
                         <!-- <a href="http://ohmage-omh.smalldata.io/" class="name color-belize-hole" align="justify">ohmage-omh</a>
