Update ohmage-omh info site URL.

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="http://ohmage-omh.smalldata.io/">ohmage-omh</a></h3>
+                <h3><a href="http://smalldata.io/ohmage-omh-website">ohmage-omh</a></h3>
 
                 <p>ohmage-omh is an open-source, open-architecture, mobile health platform intended for rapid prototyping and piloting of mobile health applications. Participants of studies run specified mobile applications on their smartphone (Android 3.0.x+ and iOS ). A data storage unit securely stores the information from the participant under their separate account. ohmage-omh supports Open mHealth (omh) read and write APIs. The Admin dashboard retrieves data from the database using the omh read API in accordance with the access credentials of the logged-in user.
                 </p>
