update information for newsfie and grouplink

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<title></title>
+<title>the small data lab</title>
     </head>
 
     <body>
@@ -361,16 +361,20 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="http://newsfie.org">Newsfie</a></h3>
+                <h3><a href="https://newsfie.org">Newsfie</a></h3>
 
-                <p>Newsfie enable instant news personalization using users' diverse digital breadcrumbs. It recommends news articles based on users' tweets, facebook posts, email, and slack communications. Everyone is encouraged to experience it with their own digital traces, or take a peek at what Newfie recommends to other famous people based on their public Twitter data, including Barack Obama, Bill Gates, Neil Patrick Harris, etc.. Newsfie works for any kind of text records. For example, you can check out Newsfie's recommendations to Charles Dickens based on his letter written in 19 century. Newsfie technology allows users to further fine-tune the recommendations through "More like this", and "Less like that" buttons that provide continuously personalize their news experiences.
+                <p>Newsfie is a research prototype that enables instant news personalization using small data.
+                    It recommends news articles based on users' tweets, facebook posts, email, slack communications, or Youtube watch history.
+                    You can experience it with your own data, or see what Newfie recommends to other famous people, such
+                    as Barack Obama, Bill Gates, Neil Patrick Harris, etc., based on their Twitter data. Also, make sure
+                    to check out the recommendations for Charles Dickens based on his letter written in 19 century.
                 </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                            <img src="startup/common-files/img/content/Newsfie.png"  alt=""/>
                                 </div>
                     </div>
                 </div>
@@ -407,14 +411,22 @@
             <div class="col-sm-6">
                 <h3><a href="">Grouplink</a></h3>
 
-                <p>Coming Soon!
+                <p>GroupLink is a group event recommendation system that suggests events to promote group members’
+
+                    face-to-face interactions in non-work settings. GroupLink uses small data to
+
+                    address the challenge of finding events that appeal to a
+
+                    collection of individuals with diverse interests by learning preferences from individual member’s personal digital traces,
+
+                    including social media, email, and online streaming histories.
                 </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                            <img src="startup/common-files/img/content/GroupLink.png"  alt="">
                                 </div>
                     </div>
                 </div>
