--- a/index.html
+++ b/index.html
@@ -439,16 +439,17 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="">Lümbr</a></h3>
+                <h3><a href="http://www.trylimbr.com/">Limbr</a></h3>
+                <img src="startup/common-files/img/content/limbr-logo.png" class="img-responsive" style="height: 3em;">
 
-                <p>Coming Soon!
-                </p>
+                <p>Limbr helps you to continuously monitor your progress towards freedom from back pain and success to a healthier life. It is a suite of applications that make it easy for you to report your daily activities and difficulties to your care team, so that your doctor knows your personal needs faster</p>
+                
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                            <img src="startup/common-files/img/content/limbr-diag copy.png"  alt="">
                                 </div>
                     </div>
                 </div>
