updated Limbr description

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <h3><a href="http://www.trylimbr.com/">Limbr</a></h3>
                 <img src="startup/common-files/img/content/limbr-logo.png" class="img-responsive" style="height: 3em;">
 
-                <p>Limbr helps you to continuously monitor your progress towards freedom from back pain and success to a healthier life. It is a suite of applications that make it easy for you to report your daily activities and difficulties to your care team</p>
+                <p>Limbr helps you to monitor your progress towards freedom from back pain and success to a healthier life. A suite of applications make it easy for you to follow your care plan, report your daily progress and set backs to your care team, and receive personalized coaching to give you the best opportunity for success.</p>
 
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
