added link to Longqi

--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
 
                         </div>
                         <div class="info">
-                            Longqi Yang
+                            <a href="http://www.cs.cornell.edu/~ylongqi/">Longqi Yang</a>
                         </div>
                     </div>
                 </div>
