added link to Fabian

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                         <div><img src="startup/common-files/img/crew/fabian-o.png" alt=""></div>
                     </div>
                     <div class="info">
-                        Fabian Okeke
+                        <a href="http://www.cs.cornell.edu/~fnokeke/">Fabian Okeke</a>
                     </div>
                 </div>
             </div>
