add link to grouplink

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     It recommends news articles based on users' tweets, facebook posts, email, slack communications, or Youtube watch history.
                     You can experience it with your own data, or see what Newfie recommends to other famous people, such
                     as Barack Obama, Bill Gates, Neil Patrick Harris, etc., based on their Twitter data. Also, make sure
-                    to check out the recommendations for Charles Dickens based on his letter written in 19 century.
+                    to check out the recommendations for Charles Dickens based on his letters written in 19 century.
                 </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
@@ -409,7 +409,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="">Grouplink</a></h3>
+                <h3><a href="https://getgrouplink.org">Grouplink</a></h3>
 
                 <p>GroupLink is a group event recommendation system that suggests events to promote group members’
 
