--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="https://getgrouplink.org">Grouplink</a></h3>
+                <h3><a href="http://getgrouplink.org">Grouplink</a></h3>
 
                 <p>GroupLink is a group event recommendation system that suggests events to promote group members’
 
